# sc-langpatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.de.md  README.md  RELEASING.md  TRANSLATING.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: publish.yml
docs/: sc-holotable.md
docs/screenshots/: README.md
messages/: de.json  en.json
project.inlang/: settings.json
src/: app.html
src-tauri/: Cargo.toml  release.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  error.rs  formatter_helpers.rs  lib.rs  main.rs  merge.rs  module.rs  preview.rs  test_helpers.rs  tests.rs
src-tauri/src/modules/: component_grades.rs  illegal_goods.rs  mission_enhancer.rs  mod.rs  toml_module.rs  weapon_enhancer.rs
src-tauri/src/modules/mission_enhancer/: crimestat.rs  description.rs  encounters.rs  format.rs  mod.rs  pool.rs  title.rs  variants.rs
src-tauri/src/modules/toml/: blueprint_markers.toml  blueprint_rewards.toml  component_grades.toml  drug_markers.toml  key_fixes.toml  label_fixes.toml  test_em_colors.toml
src/lib/: InstallationList.svelte  LanguageNotice.svelte  LanguagePack.svelte  ModuleList.svelte  PatchResults.svelte  Settings.svelte  bindings.ts  i18n.ts
src/routes/: +page.svelte
