[package]
name = "sc-langpatch"
version = "0.2.0"
description = "Star Citizen Localization Patcher"
authors = ["Valerie"]
license = "MIT"
edition = "2024"

[lib]
name = "sc_langpatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
encoding_rs = "0.8"
regex = "1"
toml = "0.8"
dirs = "6"
glob-match = "0.2"
svarog-p4k = { git = "https://github.com/19h/svarog.git" }
svarog-datacore = { git = "https://github.com/19h/svarog.git" }
chrono = "0.4.44"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
