[package]
name = "sc-langpatch"
version = "0.2.2"
description = "Star Citizen Localization Patcher"
authors = ["Valerie"]
license = "MIT"
edition = "2024"

[lib]
name = "sc_langpatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
encoding_rs = "0.8"
regex = "1"
toml = "0.8"
dirs = "6"
glob-match = "0.2"
svarog-p4k = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }
svarog-datacore = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }
sc-installs = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.1.0" }
sc-extract = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.1.0" }
sc-weapons = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.1.0" }
sc-contracts = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.1.0" }
chrono = "0.4.44"
ureq = { version = "2", default-features = false, features = ["tls"] }

# Local svarog override — mirrors sc-holotable's workspace patch. Treats
# `DataCoreReference::is_null` `instance_index == -1` as a null sentinel.
# Drop once the fix lands upstream and the pinned rev above is bumped.
[patch."https://github.com/19h/Svarog.git"]
svarog-common = { path = "E:/repros/Svarog/crates/svarog-common" }
svarog-datacore = { path = "E:/repros/Svarog/crates/svarog-datacore" }
svarog-p4k = { path = "E:/repros/Svarog/crates/svarog-p4k" }

# Mirror sc-holotable's workspace-internal profile override (their
# Cargo.toml:71-72 pins opt-level=1 for release). We extend it to dev
# too — without the optimization the generated record_store.rs match
# statements make dev-build Datacore parsing take minutes, long enough
# to matter in the normal edit → test loop. opt-level=1 is enough to
# skip the expensive LLVM passes on the giant matches; higher levels
# don't materially help here.
[profile.dev.package.sc-extract-generated]
opt-level = 1

[profile.dev.package.svarog-datacore]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release.package.sc-extract-generated]
opt-level = 1
