[package]
name = "sc-langpatch"
version = "0.3.2"
description = "Star Citizen Localization Patcher"
authors = ["Valerie"]
license = "MIT"
edition = "2024"
# `cargo run` (and Tauri's dev/build commands) target the Tauri shell.
# `preview_cli` and `preview_tui` are explicit-`--bin` debugging tools.
default-run = "sc-langpatch"

[lib]
name = "sc_langpatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enables the interactive `preview_tui` binary. Off by default so the
# Tauri release build doesn't pull superlighttui.
preview_tui = ["dep:superlighttui"]

[[bin]]
name = "preview_tui"
required-features = ["preview_tui"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
encoding_rs = "0.8"
regex = "1"
toml = "0.8"
dirs = "6"
glob-match = "0.2"
svarog-p4k = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }
svarog-datacore = { git = "https://github.com/19h/Svarog.git", rev = "ce06ec67" }
sc-installs = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.3.0" }
# sc-extract feature flags gate which DCB record types the generated
# decoder materialises at parse time. Without these, the registries
# sc-contracts builds (BlueprintPoolRegistry, ShipRegistry,
# RewardCurrencyCatalog) silently come back empty — exactly the
# "empty BP pool / no ship candidates" failure mode we hit on first
# v0.2.0 run. sc-contracts requests the same features transitively,
# but explicit opt-in here is robust to workspace-feature-propagation
# quirks across git deps.
sc-extract = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.3.0", features = ["contracts", "servicebeacon", "entityclassdefinition"] }
sc-weapons = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.3.0" }
sc-contracts = { git = "https://github.com/VeeLume/sc-holotable.git", tag = "sc-holotable/v0.3.0" }
chrono = "0.4.44"
ureq = { version = "2", default-features = false, features = ["tls"] }

# Interactive preview TUI dep — used only by `src/bin/preview_tui.rs`.
# Gated behind the `preview_tui` feature so the Tauri release build
# doesn't pull it. Build the bin with:
#   cargo run --bin preview_tui --features preview_tui
superlighttui = { version = "0.19", optional = true }

# Mirror sc-holotable's workspace-internal profile override (their
# Cargo.toml:71-72 pins opt-level=1 for release). We extend it to dev
# too — without the optimization the generated record_store.rs match
# statements make dev-build Datacore parsing take minutes, long enough
# to matter in the normal edit → test loop. opt-level=1 is enough to
# skip the expensive LLVM passes on the giant matches; higher levels
# don't materially help here.
[profile.dev.package.sc-extract-generated]
opt-level = 1

[profile.dev.package.svarog-datacore]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release.package.sc-extract-generated]
opt-level = 1
